# Spinning_dot

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Spinning_dot/: App.c  App.h  CMakeLists.txt  Circle.c  Circle.h  Debug.c  Debug.h  Defines.h  Input.c  Input.h  main.c
